--- a/.github/workflows/test-reports.yml
+++ b/.github/workflows/test-reports.yml
@@ -1,38 +1,25 @@
-name: Test Reports & Excel Generation
+name: Generate Excel Test Reports
 
 on:
   workflow_run:
-    workflows: ["Unit Tests"]
+    workflows: ["Unit Tests with Excel Report"]
     types: [completed]
     branches: [ main, develop ]
 
 jobs:
-  generate-reports:
+  generate-excel-report:
     runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event.workflow_run.conclusion == 'failure' }}
     permissions:
       contents: read
-      pull-requests: write
       actions: read
+      pull-requests: write
     
     steps:
+    # ================== SETUP MÔI TRƯỜNG ==================
     - name: Checkout code
       uses: actions/checkout@v4
       
-    - name: Download test artifacts
-      uses: actions/download-artifact@v4
-      continue-on-error: true
-      with:
-        name: test-results
-        path: ./TestResults/
-        
-    - name: Download coverage artifacts
-      uses: actions/download-artifact@v4
-      continue-on-error: true
-      with:
-        name: coverage-report
-        path: ./coveragereport/
-        
+    # ================== SETUP PYTHON CHO EXCEL ==================
     - name: Setup Python for Excel generation
       uses: actions/setup-python@v4
       with:
@@ -40,31 +27,26 @@ jobs:
         
     - name: Install Python dependencies
       run: |
+        # Cài đặt thư viện Python cần thiết để tạo file Excel
         pip install pandas openpyxl xlsxwriter lxml beautifulsoup4
         
-    - name: Check if artifacts exist
-      run: |
-        echo "Checking for test artifacts..."
-        if [ -d "./TestResults" ] && [ "$(ls -A ./TestResults 2>/dev/null)" ]; then
-          echo "✅ Test artifacts found"
-          echo "HAS_TEST_ARTIFACTS=true" >> $GITHUB_ENV
-        else
-          echo "⚠️ No test artifacts found"
-          echo "HAS_TEST_ARTIFACTS=false" >> $GITHUB_ENV
-        fi
+    # ================== DOWNLOAD ARTIFACTS TỪ WORKFLOW CHÍNH ==================
+    - name: Download test artifacts
+      uses: actions/download-artifact@v4
+      with:
+        name: test-results
+        path: ./TestResults/
         
-        echo "Checking for coverage artifacts..."
-        if [ -d "./coveragereport" ] && [ "$(ls -A ./coveragereport 2>/dev/null)" ]; then
-          echo "✅ Coverage artifacts found"
-          echo "HAS_COVERAGE_ARTIFACTS=true" >> $GITHUB_ENV
-        else
-          echo "⚠️ No coverage artifacts found"
-          echo "HAS_COVERAGE_ARTIFACTS=false" >> $GITHUB_ENV
-        fi
+    - name: Download coverage artifacts
+      uses: actions/download-artifact@v4
+      with:
+        name: coverage-report
+        path: ./coveragereport/
         
+    # ================== TẠO FILE EXCEL - PHẦN QUAN TRỌNG NHẤT ==================
     - name: Create Excel coverage report
-      if: env.HAS_TEST_ARTIFACTS == 'true' || env.HAS_COVERAGE_ARTIFACTS == 'true'
       run: |
+        # Tạo file Python script inline để generate Excel report
         cat > generate_excel_report.py << 'EOF'
         import pandas as pd
         import json
@@ -75,7 +57,7 @@ jobs:
         from bs4 import BeautifulSoup
         
         def parse_cobertura_xml():
-            """Parse Cobertura XML để lấy thông tin chi tiết"""
+            """Parse file XML coverage để lấy dữ liệu chi tiết"""
             xml_files = glob.glob('./TestResults/**/coverage.cobertura.xml', recursive=True)
             if not xml_files:
                 return None
@@ -83,11 +65,11 @@ jobs:
             tree = ET.parse(xml_files[0])
             root = tree.getroot()
             
-            # Thông tin tổng quan
+            # Lấy thông tin tổng quan về coverage
             line_rate = float(root.get('line-rate', 0)) * 100
             branch_rate = float(root.get('branch-rate', 0)) * 100
             
-            # Chi tiết theo class/file
+            # Lấy chi tiết coverage theo từng class/file
             classes_data = []
             packages = root.findall('.//package')
             
@@ -101,7 +83,7 @@ jobs:
                     class_line_rate = float(cls.get('line-rate', 0)) * 100
                     class_branch_rate = float(cls.get('branch-rate', 0)) * 100
                     
-                    # Đếm số dòng
+                    # Đếm số dòng được cover và chưa cover
                     lines = cls.findall('.//line')
                     total_lines = len(lines)
                     covered_lines = len([l for l in lines if l.get('hits', '0') != '0'])
@@ -126,7 +108,7 @@ jobs:
             }
         
         def parse_test_results():
-            """Parse test results từ TRX files"""
+            """Parse file TRX để lấy kết quả test chi tiết"""
             trx_files = glob.glob('./TestResults/**/test-results.trx', recursive=True)
             test_data = []
             
@@ -136,13 +118,14 @@ jobs:
                         content = f.read()
                         soup = BeautifulSoup(content, 'xml')
                         
-                    # Parse test results
+                    # Parse từng test result
                     test_results = soup.find_all('UnitTestResult')
                     for result in test_results:
                         test_name = result.get('testName', 'Unknown')
                         outcome = result.get('outcome', 'Unknown')
                         duration = result.get('duration', '00:00:00')
                         
+                        # Lấy error message nếu test fail
                         error_info = result.find('ErrorInfo')
                         error_message = ""
                         if error_info:
@@ -162,26 +145,27 @@ jobs:
             return test_data
         
         def create_excel_report():
-            """Tạo báo cáo Excel với nhiều sheet"""
+            """🔥 HÀM CHÍNH TẠO FILE EXCEL 🔥"""
             
-            # Parse data
+            # Parse dữ liệu từ các file output
             coverage_data = parse_cobertura_xml()
             test_data = parse_test_results()
             
-            # Tạo Excel writer
+            # Tạo tên file Excel với timestamp
             timestamp = datetime.now().strftime("%Y%m%d_%H%M%S")
             excel_file = f'./coveragereport/Coverage_Report_{timestamp}.xlsx'
             
+            # 📊 TẠO FILE EXCEL VỚI NHIỀU SHEET
             with pd.ExcelWriter(excel_file, engine='xlsxwriter') as writer:
                 workbook = writer.book
                 
-                # Định nghĩa formats
+                # 🎨 ĐỊNH NGHĨA CÁC FORMAT CHO EXCEL
                 header_format = workbook.add_format({
                     'bold': True,
                     'text_wrap': True,
                     'valign': 'top',
-                    'fg_color': '#4472C4',
-                    'font_color': 'white',
+                    'fg_color': '#4472C4',      # Màu nền xanh
+                    'font_color': 'white',       # Chữ màu trắng
                     'border': 1
                 })
                 
@@ -198,7 +182,7 @@ jobs:
                     'border': 1
                 })
                 
-                # Sheet 1: Summary
+                # 📋 SHEET 1: SUMMARY - Tổng quan
                 summary_data = []
                 if coverage_data:
                     summary_data = [
@@ -219,12 +203,13 @@ jobs:
                 df_summary = pd.DataFrame(summary_data[1:], columns=summary_data[0])
                 df_summary.to_excel(writer, sheet_name='Summary', index=False)
                 
+                # Format sheet Summary
                 worksheet_summary = writer.sheets['Summary']
                 worksheet_summary.set_column('A:A', 20)
                 worksheet_summary.set_column('B:B', 15)
                 worksheet_summary.set_column('C:C', 15)
                 
-                # Apply formats to summary
+                # Áp dụng format cho từng cell
                 for row_num in range(len(df_summary) + 1):
                     for col_num in range(len(df_summary.columns)):
                         if row_num == 0:
@@ -232,12 +217,13 @@ jobs:
                         else:
                             worksheet_summary.write(row_num, col_num, df_summary.iloc[row_num-1, col_num], cell_format)
                 
-                # Sheet 2: Detailed Coverage by Class
+                # 📊 SHEET 2: COVERAGE DETAILS - Chi tiết coverage theo class
                 if coverage_data and coverage_data['classes']:
                     df_classes = pd.DataFrame(coverage_data['classes'])
                     df_classes.to_excel(writer, sheet_name='Coverage Details', index=False)
                     
                     worksheet_details = writer.sheets['Coverage Details']
+                    # Set độ rộng cột
                     worksheet_details.set_column('A:A', 25)  # Package
                     worksheet_details.set_column('B:B', 30)  # Class
                     worksheet_details.set_column('C:C', 40)  # File
@@ -247,7 +233,7 @@ jobs:
                     worksheet_details.set_column('G:G', 15)  # Covered Lines
                     worksheet_details.set_column('H:H', 15)  # Uncovered Lines
                     
-                    # Apply formats
+                    # Áp dụng format
                     for row_num in range(len(df_classes) + 1):
                         for col_num in range(len(df_classes.columns)):
                             if row_num == 0:
@@ -255,7 +241,7 @@ jobs:
                             else:
                                 worksheet_details.write(row_num, col_num, df_classes.iloc[row_num-1, col_num], cell_format)
                 
-                # Sheet 3: Test Results
+                # 🧪 SHEET 3: TEST RESULTS - Kết quả test chi tiết
                 if test_data:
                     df_tests = pd.DataFrame(test_data)
                     df_tests.to_excel(writer, sheet_name='Test Results', index=False)
@@ -266,26 +252,26 @@ jobs:
                     worksheet_tests.set_column('C:C', 12)  # Duration
                     worksheet_tests.set_column('D:D', 60)  # Error Message
                     
-                    # Apply formats
+                    # Highlight test failed với màu đỏ
                     for row_num in range(len(df_tests) + 1):
                         for col_num in range(len(df_tests.columns)):
                             if row_num == 0:
                                 worksheet_tests.write(row_num, col_num, df_tests.columns[col_num], header_format)
                             else:
                                 cell_value = df_tests.iloc[row_num-1, col_num]
-                                # Highlight failed tests
+                                # Highlight failed tests với background màu đỏ nhạt
                                 if col_num == 1 and cell_value == 'Failed':
                                     fail_format = workbook.add_format({
                                         'text_wrap': True,
                                         'valign': 'top',
                                         'border': 1,
-                                        'bg_color': '#FFE6E6'
+                                        'bg_color': '#FFE6E6'  # Màu đỏ nhạt
                                     })
                                     worksheet_tests.write(row_num, col_num, cell_value, fail_format)
                                 else:
                                     worksheet_tests.write(row_num, col_num, cell_value, cell_format)
                 
-                # Sheet 4: Coverage Trends (placeholder for future use)
+                # 📈 SHEET 4: COVERAGE TRENDS - Xu hướng coverage (để mở rộng sau)
                 trends_data = [
                     ['Date', 'Line Coverage (%)', 'Branch Coverage (%)', 'Total Tests'],
                     [datetime.now().strftime("%Y-%m-%d"), 
@@ -303,7 +289,7 @@ jobs:
                 worksheet_trends.set_column('C:C', 18)
                 worksheet_trends.set_column('D:D', 15)
                 
-                # Apply formats
+                # Áp dụng format cho trends
                 for row_num in range(len(df_trends) + 1):
                     for col_num in range(len(df_trends.columns)):
                         if row_num == 0:
@@ -314,128 +300,19 @@ jobs:
             print(f"✅ Excel report generated: {excel_file}")
             return excel_file
         
-        # Main execution
+        # 🚀 CHẠY HÀM CHÍNH
         if __name__ == "__main__":
-            excel_file = create_excel_report()
-            
-            # Also create a simple CSV for GitHub display
-            if os.path.exists('./coveragereport/Summary.json'):
-                try:
-                    with open('./coveragereport/Summary.json', 'r') as f:
-                        summary = json.load(f)
-                    
-                    # Create summary CSV
-                    summary_csv = pd.DataFrame([
-                        ['Line Coverage', summary.get('summary', {}).get('linecoverage', 'N/A')],
-                        ['Branch Coverage', summary.get('summary', {}).get('branchcoverage', 'N/A')],
-                        ['Generated', datetime.now().strftime("%Y-%m-%d %H:%M:%S")]
-                    ], columns=['Metric', 'Value'])
-                    
-                    summary_csv.to_csv('./coveragereport/coverage_summary.csv', index=False)
-                    print("✅ CSV summary created")
-                except Exception as e:
-                    print(f"❌ Error creating CSV: {e}")
+            excel_file = create_excel_report()  # 📊 TẠO FILE EXCEL
         EOF
         
+        # 🐍 CHẠY PYTHON SCRIPT ĐỂ TẠO EXCEL
         python generate_excel_report.py
-      
-    - name: Extract coverage for summary
-      if: env.HAS_COVERAGE_ARTIFACTS == 'true'
-      run: |
-        # Method 1: Try từ Summary.txt (dễ parse hơn)
-        if [ -f "./coveragereport/Summary.txt" ]; then
-          echo "📄 Using Summary.txt method"
-          COVERAGE=$(grep -o 'Line coverage: [0-9]*\.*[0-9]*%' ./coveragereport/Summary.txt | grep -o '[0-9]*\.*[0-9]*' | head -1)
-        fi
         
-        # Method 2: Try từ JSON nếu method 1 fail
-        if [ -z "$COVERAGE" ] && [ -f "./coveragereport/Summary.json" ]; then
-          echo "📊 Using Summary.json method"
-          if command -v jq &> /dev/null; then
-            COVERAGE=$(cat ./coveragereport/Summary.json | jq -r '.summary.linecoverage' 2>/dev/null || echo "")
-          else
-            COVERAGE=$(cat ./coveragereport/Summary.json | sed -n 's/.*"linecoverage"[[:space:]]*:[[:space:]]*"\([0-9]*\.*[0-9]*\)".*/\1/p' | head -1)
-          fi
-        fi
-        
-        # Method 3: Default value nếu không parse được
-        if [ -z "$COVERAGE" ]; then
-          echo "⚠️ Cannot parse coverage, using default"
-          COVERAGE="0"
-        fi
-        
-        echo "📈 Current coverage: $COVERAGE%"
-        echo "COVERAGE=$COVERAGE" >> $GITHUB_ENV
-        
-        # Set minimum coverage threshold
-        THRESHOLD=70
-        echo "🎯 Minimum threshold: $THRESHOLD%"
-        
-        if [ -n "$COVERAGE" ] && [ "$COVERAGE" != "0" ]; then
-          BELOW_THRESHOLD=$(awk "BEGIN {print ($COVERAGE < $THRESHOLD)}")
-          if [ "$BELOW_THRESHOLD" = "1" ]; then
-            echo "❌ Coverage $COVERAGE% is below threshold $THRESHOLD%"
-            echo "::warning::Code coverage $COVERAGE% is below the required threshold of $THRESHOLD%"
-          else
-            echo "✅ Coverage $COVERAGE% meets threshold $THRESHOLD%"
-          fi
-        else
-          echo "⚠️ Could not determine coverage percentage"
-          echo "::warning::Unable to parse coverage data"
-        fi
-      
-    - name: Display detailed report summary
-      if: env.HAS_TEST_ARTIFACTS == 'true' || env.HAS_COVERAGE_ARTIFACTS == 'true'
-      run: |
-        echo "## 📊 Detailed Test Reports Generated" >> $GITHUB_STEP_SUMMARY
-        echo "" >> $GITHUB_STEP_SUMMARY
-        echo "**Coverage:** $COVERAGE%" >> $GITHUB_STEP_SUMMARY
-        echo "" >> $GITHUB_STEP_SUMMARY
-        
-        # Display CSV content if available
-        if [ -f "./coveragereport/coverage_summary.csv" ]; then
-          echo "### 📋 Quick Summary" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "| Metric | Value |" >> $GITHUB_STEP_SUMMARY
-          echo "|--------|-------|" >> $GITHUB_STEP_SUMMARY
-          tail -n +2 ./coveragereport/coverage_summary.csv | sed 's/,/ | /g' | sed 's/^/| /' | sed 's/$/ |/' >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-        fi
-        
-        echo "### 📄 Generated Reports" >> $GITHUB_STEP_SUMMARY
-        echo "" >> $GITHUB_STEP_SUMMARY
-        echo "- ✅ **Excel Report**: Detailed multi-sheet Excel report with coverage analysis" >> $GITHUB_STEP_SUMMARY
-        echo "- 📊 **HTML Report**: Interactive HTML coverage report" >> $GITHUB_STEP_SUMMARY
-        echo "- 📋 **CSV Summary**: Quick summary in CSV format" >> $GITHUB_STEP_SUMMARY
-        echo "- 📈 **Coverage Badges**: Visual coverage badges" >> $GITHUB_STEP_SUMMARY
-        echo "" >> $GITHUB_STEP_SUMMARY
-        echo "📊 **Download**: All reports available in artifacts below" >> $GITHUB_STEP_SUMMARY
-      
-    - name: Upload Excel coverage reports
+    # ================== UPLOAD EXCEL FILE ARTIFACT ==================
+    - name: Upload Excel coverage report
       uses: actions/upload-artifact@v4
-      if: always() && (env.HAS_TEST_ARTIFACTS == 'true' || env.HAS_COVERAGE_ARTIFACTS == 'true')
+      if: always()
       with:
-        name: excel-coverage-report
-        path: ./coveragereport/Coverage_Report_*.xlsx
-        retention-days: 30
-        
-    - name: Upload detailed coverage reports
-      uses: actions/upload-artifact@v4
-      if: always() && (env.HAS_TEST_ARTIFACTS == 'true' || env.HAS_COVERAGE_ARTIFACTS == 'true')
-      with:
-        name: detailed-coverage-report
-        path: ./coveragereport/**/*
-        retention-days: 30
-        
-    - name: Handle no artifacts case
-      if: always() && env.HAS_TEST_ARTIFACTS == 'false' && env.HAS_COVERAGE_ARTIFACTS == 'false'
-      run: |
-        echo "## ⚠️ No Test Artifacts Available" >> $GITHUB_STEP_SUMMARY
-        echo "" >> $GITHUB_STEP_SUMMARY
-        echo "No test results or coverage artifacts were found to generate reports." >> $GITHUB_STEP_SUMMARY
-        echo "This could happen if:" >> $GITHUB_STEP_SUMMARY
-        echo "- The unit tests workflow failed before generating artifacts" >> $GITHUB_STEP_SUMMARY
-        echo "- Artifacts have expired" >> $GITHUB_STEP_SUMMARY
-        echo "- There was an issue with the test execution" >> $GITHUB_STEP_SUMMARY
-        echo "" >> $GITHUB_STEP_SUMMARY
-        echo "Please check the unit tests workflow for more details." >> $GITHUB_STEP_SUMMARY 
+        name: coverage-excel-report
+        path: ./coveragereport/Coverage_Report_*.xlsx  # 📊 Upload chỉ file Excel
+        retention-days: 30 
